[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Training project at the end of the 1st module"
authors = ["Denis Tabakov <spbtabakoff@yandex.com>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/DenisTabakov/python-project-lvl1"
classifiers = [
    "Development Status :: 4 - Beta"
    "Environment :: Console"
    "Intended Audience :: Education"
    "License :: Free For Educational Use"
    "Natural Language :: English"
    "Operating System :: POSIX :: Linux"
    "Programming Language :: Python :: 3.8"
    "Topic :: Education :: Testing"
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
